--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -166,6 +166,7 @@ body {
   scroll-behavior: smooth;
   scrollbar-color: #b52633 transparent;
   background: #060101;
+  z-index: 0;
 }
 
 body::-webkit-scrollbar {
@@ -239,7 +240,7 @@ h4 {
 
 h5 {
   font-family: IRANRegular, sans-serif, serif !important;
-  font-size: 9rem !important;
+  font-size: .9rem !important;
 }
 
 input, textarea {
@@ -473,6 +474,14 @@ hr {
   opacity: 1 !important;
   -webkit-transition: all .53s ease-in-out !important;
   transition: all .53s ease-in-out !important;
+}
+
+.ltr {
+  direction: ltr;
+}
+
+.rtl {
+  direction: rtl;
 }
 
 .bloodRiver {
