--- a/frontend/static/css/tailwind_build.css
+++ b/frontend/static/css/tailwind_build.css
@@ -522,12 +522,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 3.5rem;
 }
 
-.right-\[12rem\] {
-  right: 12rem;
-}
-
-.top-20 {
-  top: 5rem;
+.left-4 {
+  left: 1rem;
 }
 
 .top-0 {
@@ -582,6 +578,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 0px;
 }
 
+.top-20 {
+  top: 5rem;
+}
+
 .left-1\/2 {
   left: 50%;
 }
@@ -592,10 +592,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .top-28 {
   top: 7rem;
-}
-
-.left-4 {
-  left: 1rem;
 }
 
 .top-4 {
@@ -692,6 +688,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 2.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -776,10 +776,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .mr-20 {
   margin-right: 5rem;
 }
@@ -844,6 +840,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2.5rem;
 }
 
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -906,16 +908,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-\[120px\] {
   height: 120px;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-fit {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
 }
 
 .w-\[110vw\] {
@@ -986,8 +978,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 41.666667%;
 }
 
-.w-\[24rem\] {
-  width: 24rem;
+.w-\[18rem\] {
+  width: 18rem;
 }
 
 .w-20 {
@@ -1016,18 +1008,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-\[20vw\] {
   width: 20vw;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-\[27rem\] {
-  width: 27rem;
-}
-
-.w-\[18rem\] {
-  width: 18rem;
 }
 
 .max-w-fit {
@@ -1161,6 +1141,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.25rem * var(--tw-space-x-reverse));
@@ -1177,12 +1163,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1245,10 +1225,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.375rem;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1259,6 +1235,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .rounded-l-xl {
@@ -1283,14 +1263,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 4px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-solid {
   border-style: solid;
 }
@@ -1310,6 +1282,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(127 29 29 / var(--tw-border-opacity));
 }
 
+.border-green-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(22 163 74 / var(--tw-border-opacity));
+}
+
 .border-\[\#ffffff30\] {
   border-color: #ffffff30;
 }
@@ -1322,16 +1299,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-\[\#adadad\] {
   --tw-border-opacity: 1;
   border-color: rgb(173 173 173 / var(--tw-border-opacity));
-}
-
-.border-green-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(22 163 74 / var(--tw-border-opacity));
-}
-
-.border-\[\#ac272e\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(172 39 46 / var(--tw-border-opacity));
 }
 
 .bg-zinc-500 {
@@ -1352,9 +1319,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(29 19 19 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#121212\] {
+.bg-\[\#161616\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(18 18 18 / var(--tw-bg-opacity));
+  background-color: rgb(22 22 22 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#060102\] {
@@ -1388,22 +1355,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: #8b0000f2;
 }
 
-.bg-\[\#161616\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 22 22 / var(--tw-bg-opacity));
-}
-
-.bg-gradient-to-tr {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-}
-
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.from-\[\#6d0f12\] {
-  --tw-gradient-from: #6d0f12;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(109 15 18 / 0));
 }
 
 .from-\[\#3d191a\] {
@@ -1413,10 +1366,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .via-transparent {
   --tw-gradient-stops: var(--tw-gradient-from), transparent, var(--tw-gradient-to, rgb(0 0 0 / 0));
-}
-
-.to-\[\#b82633\] {
-  --tw-gradient-to: #b82633;
 }
 
 .object-contain {
@@ -1473,29 +1422,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 2rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .py-2 {
@@ -1528,14 +1467,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.5rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .pr-8 {
@@ -1688,14 +1627,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
-.text-\[\#ffb3b3\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 179 179 / var(--tw-text-opacity));
-}
-
 .text-\[\#d8545a\] {
   --tw-text-opacity: 1;
   color: rgb(216 84 90 / var(--tw-text-opacity));
+}
+
+.text-\[\#ffb3b3\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 179 179 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1707,20 +1646,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 0.5;
 }
 
-.opacity-100 {
-  opacity: 1;
-}
-
-.opacity-0 {
-  opacity: 0;
-}
-
 .opacity-25 {
   opacity: 0.25;
 }
 
 .opacity-75 {
   opacity: 0.75;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .shadow-xl {
